--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Urban-Bazaar || Quick Gift Delivery</title>
+    <title>Urban-Bazaar - Gift Delivery in Thailand</title>
   </head>
   <body>
     <div id="root"></div>
